Bug 83385 - Fix bug in ContainerNode::getRect with scale transforms
Summary: Fix bug in ContainerNode::getRect with scale transforms
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alexandre Elias
URL:
Keywords:
Depends on: 83419
Blocks:
  Show dependency treegraph
 
Reported: 2012-04-06 12:11 PDT by Alexandre Elias
Modified: 2012-04-07 06:07 PDT (History)
5 users (show)

See Also:


Attachments
Patch (9.35 KB, patch)
2012-04-06 12:28 PDT, Alexandre Elias
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Elias 2012-04-06 12:11:09 PDT
Fix bug in ContainerNode::getRect with scale transforms
Comment 1 Alexandre Elias 2012-04-06 12:28:09 PDT
Created attachment 136052 [details]
Patch
Comment 2 Julien Chaffraix 2012-04-06 14:19:00 PDT
Comment on attachment 136052 [details]
Patch

I was going to r+, just waiting for the EWS but Simon was super fast!
Comment 3 WebKit Review Bot 2012-04-06 17:03:47 PDT
Comment on attachment 136052 [details]
Patch

Clearing flags on attachment: 136052

Committed r113520: <http://trac.webkit.org/changeset/113520>
Comment 4 WebKit Review Bot 2012-04-06 17:03:57 PDT
All reviewed patches have been landed.  Closing bug.